--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
-body{
+.gradient{
     background-image: linear-gradient(#A8BEAB, #DDE2DD);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
+    background-position: center;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* This centers vertically */
+
 }
 h1.display-1 {
     font-weight: 600;
     color: white;
     font-family: "Instrument Sans", sans-serif;
 }
-.intro{
-    margin-top: 5em;
+.intro {
+    margin-top: 0;
 }
 .btn.about{
     color: #A8BEAB;
