--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+body{
+    background-color: #F4F3F1;
+}
 .gradient{
     background-image: linear-gradient(#A8BEAB, #DDE2DD);
     background-repeat: no-repeat;
@@ -25,7 +27,12 @@ h1.display-1 {
     margin: 2em;
 }
 h1.banner{
-    color: #8C9874;
+    color: #8fa78f;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 4em;
+    text-align: center;
+    justify-content: center;
 }
 h3.instruction{
     color: #E0C48A;
@@ -225,4 +232,50 @@ li.nav-item{
     padding: .5rem .8rem;
     border-radius: 2rem;
     font-size: 1rem;
+}
+.container1{
+    margin-top: 10em;
+}
+.info-row {
+    margin: 300px 0;
+}
+
+.offer-image {
+    height: 600px;
+    width: clamp(600px, 70vw, 900px);
+    background: url('img/image\ 2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    z-index: 1;
+}
+
+.offer-text {
+    font-family: 'Poppins', sans-serif;
+    height: clamp(400px, 30vw, 500px);
+    width: clamp(350px, 45vw, 500px);
+    background: #A8BEAB;
+    border: #dde2dc63 5px solid;
+    border-radius: 6px;
+    color: black;
+    z-index: 2;
+    margin: -100px;
+    box-shadow: 5px 10px 20px 0px;
+}
+
+
+.info-title {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(30px, 3vw, 75px);
+    margin-bottom: 20px;
+}
+
+.info-section {
+    background: #dde2dc79;
+    margin: 15px;
+    padding: 10px;
+    font-size: clamp(15px, 1.3vw, 50px);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
