--- a/style.css
+++ b/style.css
@@ -510,3 +510,99 @@ h2.examples{
       grid-auto-columns: 100%;
     }
   }
+  /* start of ripped images look */
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+.container-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.container-1 .card {
+  position: relative;
+  width: 280px;
+  height: 350px;
+  margin: 30px;
+}
+
+.container-1 .card:nth-of-type(2) {
+  transform: rotate(5deg);
+}
+
+.container-1 .card .image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  transform: translate(10px, 10px);
+}
+
+.container-1 .card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 255px;
+  height: 325px;
+  border: 25px solid #fff;
+  z-index: 1;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow: 7px 7px 21px #bdbdbd, -7px -7px 21px #ffffff;
+  background: transparent;
+}
+
+.container-1 .card:nth-of-type(1)::before {
+  filter: url(#wavy1);
+}
+
+.container-1 .card:nth-of-type(2)::before {
+  filter: url(#wavy2);
+}
+
+.container .card:nth-of-type(3)::before {
+  filter: url(#wavy3);
+}
+
+.image1 {
+  background-image: url("img/image\ 1.png");
+}
+
+.image2 {
+  background-image: url("img/image\ 2.png");
+}
+
+.image3 {
+  background-image: url("https://res.cloudinary.com/dswp5qfpm/image/upload/v1597476068/animal/parrot_rjd1vq.jpg");
+}
+
+svg {
+  width: 0;
+  height: 0;
+}
+
+.container-1 .card .info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px 30px 30px 30px;
+  transform: translate(10px, 10px);
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  line-height: 1.4;
+  font-size: 20px;
+  opacity: 0;
+  transition-duration: 1s;
+}
+
+.container-1 .card:hover .info {
+  opacity: 1;
+}
+  
