--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
   }
 body{
     background-color: #e7dfd675;
+    overflow-x: hidden;
 }
 .gradient{
     background-image: linear-gradient(#A8BEAB, #DDE2DD);
@@ -37,7 +38,8 @@ h1.display-1 {
 }
 .skills{
     text-align: center;
-    margin: 2em;
+    margin-bottom: 0em;
+    margin-top: 5em;
 }
 h1.banner{
     color: #8fa794;
@@ -58,7 +60,9 @@ h1.banner{
   box-sizing: border-box; /* Ensures padding doesn't affect pseudo-element positioning */
 }
 
-
+.lessons{
+  margin-top: 1em;
+}
 /* Top-left corner border */
 .content::before,
 .content::after {
@@ -93,7 +97,8 @@ h1.banner{
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
+  overflow-x: hidden;
 }
 
 .landing video {
@@ -105,6 +110,8 @@ h1.banner{
   transform: translate(-50%, -50%);
   object-fit: cover;
   z-index: 1;
+  overflow-x: hidden;
+
 }
 
 .landing::after {
@@ -116,6 +123,7 @@ h1.banner{
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4); /* dark overlay */
   z-index: 2;
+  overflow-x: hidden;
 }
 
 .content {
@@ -299,6 +307,7 @@ h1#form{
   margin-top: 2em;
   margin-bottom: 2em;
 }
+
 .data {
     width: 1.3rem;
     height: 1.3rem;
@@ -855,4 +864,62 @@ a{
   font-weight: 600;
   margin-bottom: 1.5rem;
   color: #fff;
+}
+/*Body
+==============================*/
+/* Removes gaps between bootstrap columns */
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+.row.no-gutters > [class*='col-'] {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+/* Main gallery link */
+.gallery-item {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+  transition: transform .8s ease-in-out;
+  display: block;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.5);
+}
+
+.gallery-container{
+  margin-bottom: 8em;
+}
+/* Overlay */
+.col-pic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 6.5em;
+  background: rgba(0, 0, 0, 0.43);
+  text-align: center;
+  transition: background 0.3s ease-in-out;
+}
+
+.gallery-item:hover .col-pic {
+  background: rgba(0, 0, 0, 0.59);
+}
+
+.col-pic h5 {
+  color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-family: 'Roboto Slab', sans-serif;
+  letter-spacing: 0.25px;
 }
